Updated profile creation

--- a/events/templates/profile/profile.html
+++ b/events/templates/profile/profile.html
@@ -24,7 +24,7 @@
 
                 <li class="list-group-item">
                    Location <span class="text-muted">
-                    <p>{{user.profile.location}}</p> 
+                    <p>{{user.profile.location.name}},{{user.profile.location.location}}</p> 
                     </span>
                 </li>
     
