--- a/events/templates/navbar.html
+++ b/events/templates/navbar.html
@@ -14,7 +14,12 @@
         <li class="nav-item">
           <a class="nav-link" href="{%url 'home'%}">Home </a>
         </li>
-        
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'police'%}">Police Dept. </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Health Dept. </a>
+        </li>
       </ul>
       {% if user.is_authenticated %}
       <form class="form-inline my-2 my-lg-0 mx-md-auto" method="POST" action="#">
