--- a/events/templates/navbar.html
+++ b/events/templates/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="{%url 'police'%}">Police Dept. </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Health Dept. </a>
+          <a class="nav-link" href="{%url 'health'%}">Health Dept. </a>
         </li>
       </ul>
       {% if user.is_authenticated %}
