--- a/events/templates/navbar.html
+++ b/events/templates/navbar.html
@@ -15,6 +15,9 @@
           <a class="nav-link" href="{%url 'home'%}">Home </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{%url 'depts'%}">Businesses </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{%url 'police'%}">Police Dept. </a>
         </li>
         <li class="nav-item">
