--- a/events/templates/index.html
+++ b/events/templates/index.html
@@ -4,9 +4,32 @@
 {{block.super}}
 
 <div class="container-fluid my-2">
-<h3>
-    Lorem ipsum
-</h3>
+    <div class="row">
+        <div class="col-12">
+           <h3 class="text-center">
+            Neighborhood posts
+        </h3> 
+        </div>
+        
+        <div class="col-md-6 offset-md-3">
+            <ul class="list-group">
+                {% for post in posts %}
+                    <li class="list-group-item my-2">
+                       <p> {{ post.description }}</p>
+                        <small class="float-right">
+                            -{{post.user.username }}
+                        </small>
+                    </li>
+                {% empty %}
+                <li class="list-group-item my-2">
+                    <p> No posts available</p>
+                   
+                 </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+
 </div>
 <!-- copyrights -->
 <div class="mt-1 text-center">
