--- a/events/templates/profile/profile.html
+++ b/events/templates/profile/profile.html
@@ -35,7 +35,7 @@
                     </li>
                     <br>
                     <li class="list-group-item ">
-                        <a href="{% url 'addprof' user.id%}" class="btn btn-sm btn-outline-warning mx-auto d-block my-2">
+                        <a href="{% url 'addprof'%}" class="btn btn-sm btn-outline-warning mx-auto d-block my-2">
                             <i class="fas fa-plus-circle mr-1" aria-hidden="true"></i>
                             Add National ID and Neighborhood </a>
                     </li>
