--- a/events/templates/base.html
+++ b/events/templates/base.html
@@ -9,8 +9,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="https://assets.awwwards.com/assets/images/favicon.svg">
-    <title>Award App.</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.shopify.com/s/files/1/0070/6402/t/45/assets/favicon.png?v=4262271199771296935">
+    <title>Neighborhood Inc.</title>
     {% block styles %}
     {% bootstrap_css %}
     <!-- favicon -->
