--- a/events/templates/dept.html
+++ b/events/templates/dept.html
@@ -3,12 +3,13 @@
 {% block content %}
 {{block.super}}
 
-<div class="container-fluid my-2">
+<div class="container my-2">
 
 <h3 class="text-center">
   {{dpt.name}}
 </h3>
 <ul class="list-group mt-2">
+    {% if dpt %}
     <li class="list-group-item">
         Name: <strong>
             {{ dpt.name }}
@@ -24,6 +25,11 @@
             {{ dpt.location.name }},{{ dpt.location.location }}
         </strong>
     </li>
+    {%else%}
+    <li class="list-group-item my-1">
+        No this department in your neighborhood
+    </li>
+    {%endif%}
 </ul>
 </div>
 <!-- copyrights -->
