--- a/events/templates/index.html
+++ b/events/templates/index.html
@@ -6,6 +6,13 @@
 <div class="container-fluid my-2">
     <div class="row">
         <div class="col-12">
+            <a href="{% url 'postform' %}" class="btn btn-info float-right btn-sm">
+             <span class="text-center">
+                 Add Post <i class="fas fa-plus-circle"></i>
+             </span>
+            </a>
+        </div>
+        <div class="col-12">
            <h3 class="text-center">
             Neighborhood posts
         </h3> 
