--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,9 +16,9 @@
 }
 
 body{
-    background-color: #f4f7f6;
+    background-color: #F2e2d2;
 }
 .navbar{
-    background-color: #f4f7f6;
+    background-color: #DFB890;
     box-shadow: 0px 5px 9px #3c3c3e;
 }
